_old/homeassistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: wnsrt
    nginx.ingress.kubernetes.io/websocket-services: "homeassistant-service"
    nginx.ingress.kubernetes.io/server-snippets: |
      location /api/websocket {
          proxy_http_version 1.1;
          proxy_set_header Upgrade $http_upgrade;
          proxy_set_header Connection "upgrade";
        }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "homeassistant.wnsrt.de"
      secretName: wnsrt

  rules:
    - host: homeassistant.wnsrt.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homeassistant-service
                port:
                  number: 80
